j'ai modifier la fonction qui permet de publier une video maintenant la video est enregister dans le bon format .
